# ghcl

./: Cargo.toml  README.md  pyproject.toml
src/: cli.rs  cmd.rs  config.rs  consts.rs  lib.rs  main.rs  parser.rs
src/cli/: core.rs  mod.rs
src/cmd/: cmd_clone.rs  mod.rs
src/cmd/cmd_download/: core.rs  mod.rs  req.rs  rest.rs
src/config/: core.rs  mod.rs  segs.rs
src/ghcl/: cli.py  config.py  core.py  parser.py
src/parser/: core.rs  mod.rs
tests/: test_parser.py
