[package]
name = "gh2"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.2", features = ["derive"] }
homedir = "0.2.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tinyget = { version = "1.0.1", features = ["https"] }
toml = "0.8.11"
