[package]
name = "github-clone"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.2", features = ["derive"] }
homedir = "0.2.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.11"

[[bin]]
name = "ghcl"
path = "src/main.rs"
