[project]
name = "github-clone"
version = "0.3.0"
description = "A wrapper of `git clone` from GitHub"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "mashumaro[toml]>=3.15",
]

[project.scripts]
ghcl = "ghcl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghcl"]

[tool.ruff]
lint.select = ["I"]
target-version = "py312"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
